Estandarización de la columna CLASS

--- a/[NRC_6292]_AndersonZambrano_Lab1Unidad2.ipynb
+++ b/[NRC_6292]_AndersonZambrano_Lab1Unidad2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c3ee9569",
+   "id": "f29ef1be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "0d4adf87",
+   "id": "e02561ae",
    "metadata": {},
    "outputs": [
     {
@@ -188,8 +188,64 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "id": "36ce3979",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['N', 'N ', 'P', 'Y', 'Y '], dtype=object)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'''Verificamos todos los valores que tiene la columna CLASS para poder reemplazar por valores numéricos'''\n",
+    "df['CLASS'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "560fca39",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''Estandarizamos los valores de N y Y debido a que habían campos en los que estaban con espacios'''\n",
+    "df['CLASS'] = df['CLASS'].replace('N ','N')\n",
+    "df['CLASS'] = df['CLASS'].replace('Y ','Y')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "8e1e3b4b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['N', 'P', 'Y'], dtype=object)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'''Verificamos que tengamos los valores correctos'''\n",
+    "df['CLASS'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "4bab3e5a",
+   "id": "121fd917",
    "metadata": {},
    "outputs": [],
    "source": []
