Estandarización de la columna Gender

--- a/[NRC_6292]_AndersonZambrano_Lab1Unidad2.ipynb
+++ b/[NRC_6292]_AndersonZambrano_Lab1Unidad2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f29ef1be",
+   "id": "97204add",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e02561ae",
+   "id": "0c31d17c",
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "36ce3979",
+   "id": "81ade182",
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "560fca39",
+   "id": "51ae5cfc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "8e1e3b4b",
+   "id": "ea6e388c",
    "metadata": {},
    "outputs": [
     {
@@ -244,8 +244,63 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "id": "779d3b49",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['F', 'M', 'f'], dtype=object)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'''Verificamos todos los valores que tiene la columna Gender para poder reemplazar por valores numéricos'''\n",
+    "df['Gender'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "df726f1b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''Estandarizamos los valores de F debido a que existen campos donde hay f minuscula'''\n",
+    "df['Gender'] = df['Gender'].replace('f','F')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "355b4647",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['F', 'M'], dtype=object)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'''Verificamos que tengamos los valores correctos'''\n",
+    "df['Gender'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "121fd917",
+   "id": "6eb76a37",
    "metadata": {},
    "outputs": [],
    "source": []
