Mapeo de los valores de las columnas CLASS y Gender

--- a/[NRC_6292]_AndersonZambrano_Lab1Unidad2.ipynb
+++ b/[NRC_6292]_AndersonZambrano_Lab1Unidad2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "97204add",
+   "id": "36824f2b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "0c31d17c",
+   "id": "c175400f",
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "81ade182",
+   "id": "c6fa6fdd",
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "51ae5cfc",
+   "id": "d822af1e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "ea6e388c",
+   "id": "c3954a2c",
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "779d3b49",
+   "id": "a0b4563a",
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "df726f1b",
+   "id": "5ac55bac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "355b4647",
+   "id": "a32e9db5",
    "metadata": {},
    "outputs": [
     {
@@ -299,8 +299,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "id": "e90534eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "''' Mapeamos los valores que están como caracteres a valores numéricos en las columnas CLASS y Gender'''\n",
+    "df['CLASS'] = df['CLASS'].map({'N':0,'P':1,'Y':2})\n",
+    "df['Gender'] = df['Gender'].map({'F':0,'M':1})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "24ab62fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Datos de la columna Gender:  [0 1]\n",
+      "Datos de la columna CLASS:  [0 1 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''Verificamos que se hayan cambiado los valores a numéricos'''\n",
+    "print(\"Datos de la columna Gender: \",df['Gender'].unique())\n",
+    "print(\"Datos de la columna CLASS: \",df['CLASS'].unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "6eb76a37",
+   "id": "e7081449",
    "metadata": {},
    "outputs": [],
    "source": []
