--- a/[NRC_6292]_AndersonZambrano_Lab1Unidad2.ipynb
+++ b/[NRC_6292]_AndersonZambrano_Lab1Unidad2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "36824f2b",
+   "id": "b23f82a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c175400f",
+   "id": "0a74e860",
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c6fa6fdd",
+   "id": "87259147",
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d822af1e",
+   "id": "9ae94d04",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "c3954a2c",
+   "id": "4b065606",
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "a0b4563a",
+   "id": "dccb8ce9",
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "5ac55bac",
+   "id": "ca5237d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "a32e9db5",
+   "id": "ab1cc788",
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +300,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "e90534eb",
+   "id": "ed74159e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "24ab62fb",
+   "id": "cd1e9db2",
    "metadata": {},
    "outputs": [
     {
@@ -332,8 +332,271 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "id": "b1a673ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>AGE</th>\n",
+       "      <th>Urea</th>\n",
+       "      <th>Cr</th>\n",
+       "      <th>HbA1c</th>\n",
+       "      <th>Chol</th>\n",
+       "      <th>TG</th>\n",
+       "      <th>HDL</th>\n",
+       "      <th>LDL</th>\n",
+       "      <th>VLDL</th>\n",
+       "      <th>BMI</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>50</td>\n",
+       "      <td>4.7</td>\n",
+       "      <td>46</td>\n",
+       "      <td>4.9</td>\n",
+       "      <td>4.2</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>2.4</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>24.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>26</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>62</td>\n",
+       "      <td>4.9</td>\n",
+       "      <td>3.7</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>2.1</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>23.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>50</td>\n",
+       "      <td>4.7</td>\n",
+       "      <td>46</td>\n",
+       "      <td>4.9</td>\n",
+       "      <td>4.2</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>2.4</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>24.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>50</td>\n",
+       "      <td>4.7</td>\n",
+       "      <td>46</td>\n",
+       "      <td>4.9</td>\n",
+       "      <td>4.2</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>2.4</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>24.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>33</td>\n",
+       "      <td>7.1</td>\n",
+       "      <td>46</td>\n",
+       "      <td>4.9</td>\n",
+       "      <td>4.9</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>21.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>995</th>\n",
+       "      <td>1</td>\n",
+       "      <td>71</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>97</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>7.5</td>\n",
+       "      <td>1.7</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>30.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>996</th>\n",
+       "      <td>1</td>\n",
+       "      <td>31</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>60</td>\n",
+       "      <td>12.3</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>2.2</td>\n",
+       "      <td>0.7</td>\n",
+       "      <td>2.4</td>\n",
+       "      <td>15.4</td>\n",
+       "      <td>37.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>997</th>\n",
+       "      <td>1</td>\n",
+       "      <td>30</td>\n",
+       "      <td>7.1</td>\n",
+       "      <td>81</td>\n",
+       "      <td>6.7</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>2.4</td>\n",
+       "      <td>8.1</td>\n",
+       "      <td>27.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>998</th>\n",
+       "      <td>1</td>\n",
+       "      <td>38</td>\n",
+       "      <td>5.8</td>\n",
+       "      <td>59</td>\n",
+       "      <td>6.7</td>\n",
+       "      <td>5.3</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.6</td>\n",
+       "      <td>2.9</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>40.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>999</th>\n",
+       "      <td>1</td>\n",
+       "      <td>54</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>67</td>\n",
+       "      <td>6.9</td>\n",
+       "      <td>3.8</td>\n",
+       "      <td>1.7</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.7</td>\n",
+       "      <td>33.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1000 rows × 11 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Gender  AGE  Urea  Cr  HbA1c  Chol   TG  HDL  LDL  VLDL   BMI\n",
+       "0         0   50   4.7  46    4.9   4.2  0.9  2.4  1.4   0.5  24.0\n",
+       "1         1   26   4.5  62    4.9   3.7  1.4  1.1  2.1   0.6  23.0\n",
+       "2         0   50   4.7  46    4.9   4.2  0.9  2.4  1.4   0.5  24.0\n",
+       "3         0   50   4.7  46    4.9   4.2  0.9  2.4  1.4   0.5  24.0\n",
+       "4         1   33   7.1  46    4.9   4.9  1.0  0.8  2.0   0.4  21.0\n",
+       "..      ...  ...   ...  ..    ...   ...  ...  ...  ...   ...   ...\n",
+       "995       1   71  11.0  97    7.0   7.5  1.7  1.2  1.8   0.6  30.0\n",
+       "996       1   31   3.0  60   12.3   4.1  2.2  0.7  2.4  15.4  37.2\n",
+       "997       1   30   7.1  81    6.7   4.1  1.1  1.2  2.4   8.1  27.4\n",
+       "998       1   38   5.8  59    6.7   5.3  2.0  1.6  2.9  14.0  40.5\n",
+       "999       1   54   5.0  67    6.9   3.8  1.7  1.1  3.0   0.7  33.0\n",
+       "\n",
+       "[1000 rows x 11 columns]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'''Definición de las características (variables de entrada) que son relevantes para definir una salida'''\n",
+    "features = ['Gender', 'AGE', 'Urea','Cr','HbA1c', 'Chol', 'TG','HDL','LDL', 'VLDL', 'BMI']\n",
+    "X = df[features]\n",
+    "X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "6fc6bffc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      0\n",
+       "1      0\n",
+       "2      0\n",
+       "3      0\n",
+       "4      0\n",
+       "      ..\n",
+       "995    2\n",
+       "996    2\n",
+       "997    2\n",
+       "998    2\n",
+       "999    2\n",
+       "Name: CLASS, Length: 1000, dtype: int64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'''Definición de la variable dependiente, la columna con los valores que intentamos predecir'''\n",
+    "y = df['CLASS']\n",
+    "y"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "e7081449",
+   "id": "c7ec5470",
    "metadata": {},
    "outputs": [],
    "source": []
