Creación de variables de test y entrenamiento. Creación del modelo

--- a/[NRC_6292]_AndersonZambrano_Lab1Unidad2.ipynb
+++ b/[NRC_6292]_AndersonZambrano_Lab1Unidad2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b23f82a0",
+   "id": "0c3a9f6b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "0a74e860",
+   "id": "124359a5",
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "87259147",
+   "id": "61fc3638",
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "9ae94d04",
+   "id": "67871bdd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "4b065606",
+   "id": "7296c1fd",
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "dccb8ce9",
+   "id": "a2bf1d20",
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "ca5237d3",
+   "id": "ad58878c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "ab1cc788",
+   "id": "cca8b7cb",
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +300,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "ed74159e",
+   "id": "95f47748",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "cd1e9db2",
+   "id": "cac9f7b0",
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "b1a673ad",
+   "id": "7b69b7c2",
    "metadata": {},
    "outputs": [
     {
@@ -562,7 +562,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "6fc6bffc",
+   "id": "8db9fd68",
    "metadata": {},
    "outputs": [
     {
@@ -595,8 +595,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "id": "5d730d2d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''Separación de porcentajes, 70% para entrenar y 30% para realizar pruebas de X y Y'''\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "78d145ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''Creación del árbol de decisión y ajustamos los valores del modelo a partir de la X y la Y'''\n",
+    "modelo = DecisionTreeClassifier()\n",
+    "modelo = modelo.fit(X_train,y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "c7ec5470",
+   "id": "7776299b",
    "metadata": {},
    "outputs": [],
    "source": []
